// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DirectLinks /> > renders commercial links 1`] = `
<DocumentFragment>
  <div
    class="_DirectLinks_7319b6"
    id="DirectLinks"
  >
    <h3
      class="amsterdam-heading amsterdam-heading--2"
      id="DirectLinksHeader"
    >
      Bezoek ook
    </h3>
    <ul
      class="_LinkList_7319b6"
    >
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="/uitleg"
          id="Uitleg"
        >
          Dit ziet u in Mijn Amsterdam
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/sbl/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Stadsbank van Lening
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/veelgevraagd/mijn-amsterdam-b5077"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Veelgestelde vragen
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.digitaleoverheid.nl/overzicht-van-alle-onderwerpen/berichtenbox-voor-bedrijven/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          MijnOverheid Berichtenbox
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Amsterdam.nl
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/parkeren-verkeer/taxi/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Taxiportaal
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/parkeren-verkeer/varen-amsterdam/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Varen in Amsterdam
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<DirectLinks /> > renders private links 1`] = `
<DocumentFragment>
  <div
    class="_DirectLinks_7319b6"
    id="DirectLinks"
  >
    <h3
      class="amsterdam-heading amsterdam-heading--2"
      id="DirectLinksHeader"
    >
      Bezoek ook
    </h3>
    <ul
      class="_LinkList_7319b6"
    >
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="/uitleg"
          id="Uitleg"
        >
          Dit ziet u in Mijn Amsterdam
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/sbl/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Stadsbank van Lening
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/veelgevraagd/mijn-amsterdam-b5077"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Veelgestelde vragen
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://mijn.overheid.nl/berichtenbox/inbox/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          MijnOverheid Berichtenbox
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Amsterdam.nl
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/parkeren-verkeer/taxi/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Taxiportaal
        </a>
      </li>
      <li>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/parkeren-verkeer/varen-amsterdam/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              externe-link-icoon
            </title>
            <g
              fill-rule="evenodd"
              stroke="none"
              stroke-width="1"
            >
              <path
                d="M19.0056332,0 L32.009697,0 L32.009697,12.9918801 L28.0084466,12.9918801 L28.0084466,6.82573392 L14.4342046,20.4172392 L11.60332,17.5990006 L25.1875651,3.99750156 L19.0056332,3.99750156 L19.0056332,0 Z M26.0078214,13.9912555 L26.0178245,32 L0.0096969697,32 L0.0096969697,6.01623985 L17.9853144,6.01623985 L14.0040702,9.9937539 L14.0240765,10.0137414 L4.01094736,10.0137414 L4.01094736,28.0024984 L22.0165741,28.0024984 L22.006571,17.988757 L26.0078214,13.9912555 Z"
              />
            </g>
          </svg>
          Varen in Amsterdam
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
